--- a/bower.json
+++ b/bower.json
@@ -2,19 +2,18 @@
   "name": "pully",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "1.2.16",
     "json3": "~3.3.1",
     "es5-shim": "~3.1.0",
     "bootstrap": "~3.2.0",
-    "angular-resource": "1.2.16",
-    "angular-cookies": "1.2.16",
-    "angular-sanitize": "1.2.16",
-    "angular-touch": "1.2.16",
-    "angular-route": "1.2.16"
+    "angular-resource": "1.2.21",
+    "angular-cookies": "1.2.21",
+    "angular-sanitize": "1.2.21",
+    "angular-touch": "1.2.21",
+    "angular-route": "1.2.21",
+    "angular": "~1.2.21",
+    "angular-animate": "~1.2.21"
   },
   "devDependencies": {
-    "angular-mocks": "1.2.16",
-    "angular-scenario": "1.2.16"
   },
   "appPath": "app"
 }
